aracely deja de criticar mis commit , intento de conexion base datos

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,5 +3,9 @@ PAYPAL_CLIENT_ID=YOUR_SANDBOX_CLIENT_ID
 PAYPAL_SECRET=YOUR_SANDBOX_SECRET
 # Opcional: setear PAYPAL_ENV=live para producción
 # PAYPAL_ENV=sandbox
-# Puerto del server
-PORT=4000
+# Si quieres que el servidor use el backend Java en lugar de SQLite local,
+# define BACKEND_API_URL (ejemplo: http://localhost:8094)
+BACKEND_API_URL=
+# Puerto del server (por defecto para esta configuración)
+# Cambiado a 3000 para no colisionar con el backend Spring Boot en 8094
+PORT=3000
