--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "migrate": "node scripts/migrateSeed.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.12"
+    "node-fetch": "^2.6.12",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
